Finish basic song list UI overhaul and fix marking songs as done
This required a lot of pain while writing a proper dataChanged()
handler in SongsFilterModel.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,7 @@ qt_add_qml_module(muziko
         qml/icons/done.svg
         qml/icons/edit.svg
         qml/icons/menu.svg
+        qml/icons/null.svg
         qml/icons/settings.svg
 )
 
