--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -14,4 +14,5 @@
             <meta-data android:name="android.app.extract_android_style" android:value="minimal"/>
         </activity>
     </application>
+<uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
