--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -16,6 +16,16 @@
             <meta-data android:name="android.app.splash_screen_drawable_portrait" android:resource="@drawable/splashscreen_port"/>
             <meta-data android:name="android.app.splash_screen_drawable_landscape" android:resource="@drawable/splashscreen_land"/>
         </activity>
+        <service android:process=":muziko_notifier" android:name=".NotifierService" android:exported="true">
+            <meta-data android:name="android.app.lib_name" android:value="MuzikoAndroidService"/>
+            <meta-data android:name="android.app.background_running" android:value="true"/>
+        </service>
+        <receiver android:name=".NotifierReceiver" android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+        </receiver>
     </application>
 <uses-permission android:name="android.permission.INTERNET"/>
+<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 </manifest>
