--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2023 Loren Burkholder <computersemiexpert@outlook.com>
+#
+# SPDX-License-Identifier: GPL-3.0-or-later
+
 # This file is used to ignore files which are generated
 # ----------------------------------------------------------------------------
 
