--- a/.github/workflows/linux-build.yml
+++ b/.github/workflows/linux-build.yml
@@ -57,7 +57,8 @@ jobs:
       - name: Build release package
         if: ${{ github.event.inputs.packageRelease || startsWith(github.ref, 'refs/tags/v') }}
         run: |
-          linuxdeploy-x86_64.AppImage --plugin qt --output appimage --desktop-file muziko.desktop --icon-file qml/icons/logo.svg --executable build/muziko --appdir AppDir
+          cp qml/icons/logo.svg muziko.svg
+          linuxdeploy-x86_64.AppImage --plugin qt --output appimage --desktop-file muziko.desktop --icon-file muziko.svg --executable build/muziko --appdir AppDir
 
       - name: Upload release package
         if: ${{ github.event.inputs.packageRelease || startsWith(github.ref, 'refs/tags/v') }}
