--- a/.github/workflows/linux-build.yml
+++ b/.github/workflows/linux-build.yml
@@ -58,7 +58,7 @@ jobs:
         if: ${{ github.event.inputs.packageRelease || startsWith(github.ref, 'refs/tags/v') }}
         run: |
           cp qml/icons/logo.svg muziko.svg
-          linuxdeploy-x86_64.AppImage --plugin qt --output appimage --desktop-file muziko.desktop --icon-file muziko.svg --executable build/muziko --appdir AppDir
+          linuxdeploy-x86_64.AppImage --plugin qt --output appimage --desktop-file muziko.desktop --icon-file muziko.svg --executable build/muziko --appdir AppDir -qmldir=./qml
 
       - name: Upload release package
         if: ${{ github.event.inputs.packageRelease || startsWith(github.ref, 'refs/tags/v') }}
