--- a/windeployqt.cmake.in
+++ b/windeployqt.cmake.in
@@ -7,4 +7,4 @@ set(WINDEPLOYQT "@WINDEPLOYQT@")
 set(WINDEPLOYQT_COMPONENT "@WINDEPLOYQT_COMPONENT@")
 set(CMAKE_CURRENT_SOURCE_DIR "@CMAKE_CURRENT_SOURCE_DIR@")
 
-execute_process(COMMAND ${WINDEPLOYQT} ${WINDEPLOYQT_COMPONENT}/data/bin WORKING_DIRECTORY ${CPACK_TEMPORARY_INSTALL_DIRECTORY}/packages)
+execute_process(COMMAND ${WINDEPLOYQT} --qmldir qml ${WINDEPLOYQT_COMPONENT}/data/bin WORKING_DIRECTORY ${CPACK_TEMPORARY_INSTALL_DIRECTORY}/packages)
