Fix Windows binary deployment

--- a/windeployqt.cmake.in
+++ b/windeployqt.cmake.in
@@ -4,7 +4,9 @@
 
 # this comes from https://www.ics.com/blog/revisiting-qt-installer-framework-cmake
 set(WINDEPLOYQT "@WINDEPLOYQT@")
-set(WINDEPLOYQT_COMPONENT "@WINDEPLOYQT_COMPONENT@")
+set(TARGET_FILE "@TARGET_FILE@")
+set(CMAKE_BUILD_TYPE "@CMAKE_BUILD_TYPE@")
 set(CMAKE_CURRENT_SOURCE_DIR "@CMAKE_CURRENT_SOURCE_DIR@")
+set(CMAKE_CURRENT_BINARY_DIR "@CMAKE_CURRENT_BINARY_DIR@")
 
-execute_process(COMMAND ${WINDEPLOYQT} --qmldir qml ${WINDEPLOYQT_COMPONENT}/data/bin WORKING_DIRECTORY ${CPACK_TEMPORARY_INSTALL_DIRECTORY}/packages)
+execute_process(COMMAND ${WINDEPLOYQT} --qmldir ${CMAKE_CURRENT_SOURCE_DIR}/qml "${TARGET_FILE}" WORKING_DIRECTORY ${CMAKE_INSTALL_PREFIX})
