Speed up CI builds by building on all cores

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -69,7 +69,7 @@ jobs:
       run: |
         mkdir build && cd build
         cmake ..
-        cmake --build . --config Release
+        cmake --build . --config Release -j $(nproc)
         cd ..
 
     - name: Perform CodeQL Analysis
