--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           mkdir build && cd build
           cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo -DCMAKE_CXX_COMPILER=clang++ -DRUN_CLANG_TIDY=ON ..
-          cmake --build . --config RelWithDebInfo
+          cmake --build . --config RelWithDebInfo -j $(nproc)
           cd ..
 
       - name: Check clang-format
