--- a/.github/workflows/linux-build.yml
+++ b/.github/workflows/linux-build.yml
@@ -36,8 +36,8 @@ jobs:
       - name: Build
         run: |
           mkdir build && cd build
-          cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo -DCMAKE_CXX_COMPILER=clang++ ..
-          cmake --build . --config RelWithDebInfo -j $(nproc)
+          cmake ..
+          cmake --build . -j $(nproc)
           cd ..
 
       # now we can deploy the release if necessary
