--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -25,9 +25,9 @@ jobs:
       # Taken from https://github.com/sourcemeta/jsontoolkit/commit/2159d4aa26fba4bd77a0a5d9ce7c22233a79660f
       # See https://github.com/actions/runner-images/issues/8659
       - name: Work around actions/runner-images#8659
-￼        run: |
-￼          sudo rm -f /etc/apt/sources.list.d/ubuntu-toolchain-r-ubuntu-test-jammy.list
-￼          sudo apt-get install --yes --allow-downgrades libc6=2.35-0ubuntu3.4 libc6-dev=2.35-0ubuntu3.4 libstdc++6=12.3.0-1ubuntu1~22.04 libgcc-s1=12.3.0-1ubuntu1~22.04
+        run: |
+          sudo rm -f /etc/apt/sources.list.d/ubuntu-toolchain-r-ubuntu-test-jammy.list
+          sudo apt-get install --yes --allow-downgrades libc6=2.35-0ubuntu3.4 libc6-dev=2.35-0ubuntu3.4 libstdc++6=12.3.0-1ubuntu1~22.04 libgcc-s1=12.3.0-1ubuntu1~22.04
 
       - name: Checkout code
         uses: actions/checkout@v3
